# stash

./: App.py  README.md  backupApp.txt  data.sql  pyproject.toml
